src/fuleco/Fuleco_v3Parser.java
package fuleco;

// Generated from C:\Users\Alexandra\Desktop\proyecto de lenguajes\FULECO_V3\Fuleco_v3.g4 by ANTLR 4.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class Fuleco_v3Parser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SAQUE_INICIAL=1, ABRIR_LLAVE=2, CERRAR_LLAVE=3, BRASILERO=4, ALEMAN=5, 
		JAPON=6, PARENTESIS_IZQ=7, PARENTESIS_DER=8, GAMBETEAR=9, TRUE=10, FALSE=11, 
		ARBITRO=12, ENTONCES=13, SOBORNO=14, TIEMPO_ADICIONAL=15, QUEMAR_TIEMPO=16, 
		LESIONAR=17, ANIMAR=18, CARA=19, SELLO=20, EMPATE=21, PENALTY=22, DIFERENTE=23, 
		MOSTRAR_MARCADOR=24, COMILLAS=25, FIN_LINEA=26, CONCATENAR=27, RETURN=28, 
		COMA=29, WS=30, CADENA=31, NUMEROS=32, VARIABLE=33, DIGITOS=34, LETRA=35;
	public static final String[] tokenNames = {
		"<INVALID>", "'SAQUE_INICIAL'", "'(>_<)'", "'(>.<)'", "'Brasilero'", "'Aleman'", 
		"'Japon'", "'('", "')'", "'GAMBETEAR'", "'GOL'", "'AUTOGOL'", "'ARBITRO'", 
		"'PIENSA'", "'SOBORNO'", "'TIEMPO_ADICIONAL'", "'QUEMAR_TIEMPO'", "'LESIONAR'", 
		"'ANIMAR'", "'CARA'", "'SELLO'", "'EMPATE'", "'PENALTY'", "'!='", "'MOSTRAR_MARCADOR'", 
		"'\"'", "'!'", "'+'", "'return'", "','", "WS", "CADENA", "NUMEROS", "VARIABLE", 
		"DIGITOS", "LETRA"
	};
	public static final int
		RULE_clase = 0, RULE_programa = 1, RULE_funcion = 2, RULE_parametros = 3, 
		RULE_declaraciones = 4, RULE_declaracion = 5, RULE_tipo = 6, RULE_sentencias = 7, 
		RULE_sentencia = 8, RULE_llamarFunc = 9, RULE_impr = 10, RULE_concaten = 11, 
		RULE_bloque = 12, RULE_asign = 13, RULE_comparacion = 14, RULE_ciclo = 15, 
		RULE_expresion = 16, RULE_opIgu = 17, RULE_relacion = 18, RULE_opRel = 19, 
		RULE_adicion = 20, RULE_opSum = 21, RULE_termino = 22, RULE_opMul = 23, 
		RULE_primario = 24, RULE_literal = 25, RULE_entero = 26, RULE_booleano = 27;
	public static final String[] ruleNames = {
		"clase", "programa", "funcion", "parametros", "declaraciones", "declaracion", 
		"tipo", "sentencias", "sentencia", "llamarFunc", "impr", "concaten", "bloque", 
		"asign", "comparacion", "ciclo", "expresion", "opIgu", "relacion", "opRel", 
		"adicion", "opSum", "termino", "opMul", "primario", "literal", "entero", 
		"booleano"
	};

	@Override
	public String getGrammarFileName() { return "Fuleco_v3.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public Fuleco_v3Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ClaseContext extends ParserRuleContext {
		public List<FuncionContext> funcion() {
			return getRuleContexts(FuncionContext.class);
		}
		public FuncionContext funcion(int i) {
			return getRuleContext(FuncionContext.class,i);
		}
		public ProgramaContext programa() {
			return getRuleContext(ProgramaContext.class,0);
		}
		public ClaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_clase; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Fuleco_v3Listener ) ((Fuleco_v3Listener)listener).enterClase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Fuleco_v3Listener ) ((Fuleco_v3Listener)listener).exitClase(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Fuleco_v3Visitor ) return ((Fuleco_v3Visitor<? extends T>)visitor).visitClase(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClaseContext clase() throws RecognitionException {
		ClaseContext _localctx = new ClaseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_clase);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56); programa();
			setState(60);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BRASILERO) | (1L << ALEMAN) | (1L << JAPON))) != 0)) {
				{
				{
				setState(57); funcion();
				}
				}
				setState(62);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramaContext extends ParserRuleContext {
		public TerminalNode PARENTESIS_IZQ() { return getToken(Fuleco_v3Parser.PARENTESIS_IZQ, 0); }
		public TerminalNode BRASILERO() { return getToken(Fuleco_v3Parser.BRASILERO, 0); }
		public DeclaracionesContext declaraciones() {
			return getRuleContext(DeclaracionesContext.class,0);
		}
		public TerminalNode CERRAR_LLAVE() { return getToken(Fuleco_v3Parser.CERRAR_LLAVE, 0); }
		public SentenciasContext sentencias() {
			return getRuleContext(SentenciasContext.class,0);
		}
		public TerminalNode SAQUE_INICIAL() { return getToken(Fuleco_v3Parser.SAQUE_INICIAL, 0); }
		public TerminalNode ABRIR_LLAVE() { return getToken(Fuleco_v3Parser.ABRIR_LLAVE, 0); }
		public TerminalNode PARENTESIS_DER() { return getToken(Fuleco_v3Parser.PARENTESIS_DER, 0); }
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Fuleco_v3Listener ) ((Fuleco_v3Listener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Fuleco_v3Listener ) ((Fuleco_v3Listener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Fuleco_v3Visitor ) return ((Fuleco_v3Visitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63); match(BRASILERO);
			setState(64); match(SAQUE_INICIAL);
			setState(65); match(PARENTESIS_IZQ);
			setState(66); match(PARENTESIS_DER);
			setState(67); match(ABRIR_LLAVE);
			setState(68); declaraciones();
			setState(69); sentencias();
			setState(70); match(CERRAR_LLAVE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncionContext extends ParserRuleContext {
		public TerminalNode PARENTESIS_IZQ() { return getToken(Fuleco_v3Parser.PARENTESIS_IZQ, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode ABRIR_LLAVE() { return getToken(Fuleco_v3Parser.ABRIR_LLAVE, 0); }
		public TerminalNode PARENTESIS_DER() { return getToken(Fuleco_v3Parser.PARENTESIS_DER, 0); }
		public List<TerminalNode> COMA() { return getTokens(Fuleco_v3Parser.COMA); }
		public TerminalNode RETURN() { return getToken(Fuleco_v3Parser.RETURN, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public ParametrosContext parametros(int i) {
			return getRuleContext(ParametrosContext.class,i);
		}
		public DeclaracionesContext declaraciones() {
			return getRuleContext(DeclaracionesContext.class,0);
		}
		public TerminalNode CERRAR_LLAVE() { return getToken(Fuleco_v3Parser.CERRAR_LLAVE, 0); }
		public List<ParametrosContext> parametros() {
			return getRuleContexts(ParametrosContext.class);
		}
		public TerminalNode COMA(int i) {
			return getToken(Fuleco_v3Parser.COMA, i);
		}
		public TerminalNode FIN_LINEA() { return getToken(Fuleco_v3Parser.FIN_LINEA, 0); }
		public TerminalNode VARIABLE() { return getToken(Fuleco_v3Parser.VARIABLE, 0); }
		public SentenciasContext sentencias() {
			return getRuleContext(SentenciasContext.class,0);
		}
		public FuncionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Fuleco_v3Listener ) ((Fuleco_v3Listener)listener).enterFuncion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Fuleco_v3Listener ) ((Fuleco_v3Listener)listener).exitFuncion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Fuleco_v3Visitor ) return ((Fuleco_v3Visitor<? extends T>)visitor).visitFuncion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncionContext funcion() throws RecognitionException {
		FuncionContext _localctx = new FuncionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_funcion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72); tipo();
			setState(73); match(VARIABLE);
			setState(74); match(PARENTESIS_IZQ);
			setState(83);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BRASILERO) | (1L << ALEMAN) | (1L << JAPON))) != 0)) {
				{
				setState(75); parametros();
				setState(80);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMA) {
					{
					{
					setState(76); match(COMA);
					setState(77); parametros();
					}
					}
					setState(82);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(85); match(PARENTESIS_DER);
			setState(86); match(ABRIR_LLAVE);
			setState(90);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BRASILERO) | (1L << ALEMAN) | (1L << JAPON))) != 0)) {
				{
				setState(87); declaraciones();
				setState(88); sentencias();
				}
			}

			setState(92); match(RETURN);
			setState(93); expresion();
			setState(94); match(FIN_LINEA);
			setState(95); match(CERRAR_LLAVE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParametrosContext extends ParserRuleContext {
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode VARIABLE() { return getToken(Fuleco_v3Parser.VARIABLE, 0); }
		public ParametrosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametros; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Fuleco_v3Listener ) ((Fuleco_v3Listener)listener).enterParametros(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Fuleco_v3Listener ) ((Fuleco_v3Listener)listener).exitParametros(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Fuleco_v3Visitor ) return ((Fuleco_v3Visitor<? extends T>)visitor).visitParametros(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParametrosContext parametros() throws RecognitionException {
		ParametrosContext _localctx = new ParametrosContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_parametros);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97); tipo();
			setState(98); match(VARIABLE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaracionesContext extends ParserRuleContext {
		public List<DeclaracionContext> declaracion() {
			return getRuleContexts(DeclaracionContext.class);
		}
		public DeclaracionContext declaracion(int i) {
			return getRuleContext(DeclaracionContext.class,i);
		}
		public DeclaracionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaraciones; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Fuleco_v3Listener ) ((Fuleco_v3Listener)listener).enterDeclaraciones(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Fuleco_v3Listener ) ((Fuleco_v3Listener)listener).exitDeclaraciones(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Fuleco_v3Visitor ) return ((Fuleco_v3Visitor<? extends T>)visitor).visitDeclaraciones(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracionesContext declaraciones() throws RecognitionException {
		DeclaracionesContext _localctx = new DeclaracionesContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declaraciones);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(100); declaracion();
				}
				}
				setState(103); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BRASILERO) | (1L << ALEMAN) | (1L << JAPON))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaracionContext extends ParserRuleContext {
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode FIN_LINEA() { return getToken(Fuleco_v3Parser.FIN_LINEA, 0); }
		public TerminalNode VARIABLE() { return getToken(Fuleco_v3Parser.VARIABLE, 0); }
		public AsignContext asign() {
			return getRuleContext(AsignContext.class,0);
		}
		public DeclaracionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Fuleco_v3Listener ) ((Fuleco_v3Listener)listener).enterDeclaracion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Fuleco_v3Listener ) ((Fuleco_v3Listener)listener).exitDeclaracion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Fuleco_v3Visitor ) return ((Fuleco_v3Visitor<? extends T>)visitor).visitDeclaracion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracionContext declaracion() throws RecognitionException {
		DeclaracionContext _localctx = new DeclaracionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_declaracion);
		try {
			setState(112);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(105); tipo();
				setState(106); match(VARIABLE);
				setState(107); match(FIN_LINEA);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(109); tipo();
				setState(110); asign();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TipoContext extends ParserRuleContext {
		public TerminalNode BRASILERO() { return getToken(Fuleco_v3Parser.BRASILERO, 0); }
		public TerminalNode JAPON() { return getToken(Fuleco_v3Parser.JAPON, 0); }
		public TerminalNode ALEMAN() { return getToken(Fuleco_v3Parser.ALEMAN, 0); }
		public TipoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Fuleco_v3Listener ) ((Fuleco_v3Listener)listener).enterTipo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Fuleco_v3Listener ) ((Fuleco_v3Listener)listener).exitTipo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Fuleco_v3Visitor ) return ((Fuleco_v3Visitor<? extends T>)visitor).visitTipo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TipoContext tipo() throws RecognitionException {
		TipoContext _localctx = new TipoContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_tipo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BRASILERO) | (1L << ALEMAN) | (1L << JAPON))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentenciasContext extends ParserRuleContext {
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public SentenciasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentencias; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Fuleco_v3Listener ) ((Fuleco_v3Listener)listener).enterSentencias(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Fuleco_v3Listener ) ((Fuleco_v3Listener)listener).exitSentencias(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Fuleco_v3Visitor ) return ((Fuleco_v3Visitor<? extends T>)visitor).visitSentencias(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentenciasContext sentencias() throws RecognitionException {
		SentenciasContext _localctx = new SentenciasContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_sentencias);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(116); sentencia();
				}
				}
				setState(119); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ABRIR_LLAVE) | (1L << GAMBETEAR) | (1L << ARBITRO) | (1L << MOSTRAR_MARCADOR) | (1L << VARIABLE))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentenciaContext extends ParserRuleContext {
		public CicloContext ciclo() {
			return getRuleContext(CicloContext.class,0);
		}
		public ImprContext impr() {
			return getRuleContext(ImprContext.class,0);
		}
		public ComparacionContext comparacion() {
			return getRuleContext(ComparacionContext.class,0);
		}
		public LlamarFuncContext llamarFunc() {
			return getRuleContext(LlamarFuncContext.class,0);
		}
		public AsignContext asign() {
			return getRuleContext(AsignContext.class,0);
		}
		public BloqueContext bloque() {
			return getRuleContext(BloqueContext.class,0);
		}
		public SentenciaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentencia; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Fuleco_v3Listener ) ((Fuleco_v3Listener)listener).enterSentencia(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Fuleco_v3Listener ) ((Fuleco_v3Listener)listener).exitSentencia(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Fuleco_v3Visitor ) return ((Fuleco_v3Visitor<? extends T>)visitor).visitSentencia(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentenciaContext sentencia() throws RecognitionException {
		SentenciaContext _localctx = new SentenciaContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_sentencia);
		try {
			setState(127);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(121); impr();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(122); bloque();
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(123); asign();
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(124); comparacion();
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(125); ciclo();
				}
				break;

			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(126); llamarFunc();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LlamarFuncContext extends ParserRuleContext {
		public List<PrimarioContext> primario() {
			return getRuleContexts(PrimarioContext.class);
		}
		public TerminalNode PARENTESIS_IZQ() { return getToken(Fuleco_v3Parser.PARENTESIS_IZQ, 0); }
		public PrimarioContext primario(int i) {
			return getRuleContext(PrimarioContext.class,i);
		}
		public TerminalNode COMA(int i) {
			return getToken(Fuleco_v3Parser.COMA, i);
		}
		public TerminalNode VARIABLE() { return getToken(Fuleco_v3Parser.VARIABLE, 0); }
		public TerminalNode PARENTESIS_DER() { return getToken(Fuleco_v3Parser.PARENTESIS_DER, 0); }
		public List<TerminalNode> COMA() { return getTokens(Fuleco_v3Parser.COMA); }
		public LlamarFuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_llamarFunc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Fuleco_v3Listener ) ((Fuleco_v3Listener)listener).enterLlamarFunc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Fuleco_v3Listener ) ((Fuleco_v3Listener)listener).exitLlamarFunc(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Fuleco_v3Visitor ) return ((Fuleco_v3Visitor<? extends T>)visitor).visitLlamarFunc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LlamarFuncContext llamarFunc() throws RecognitionException {
		LlamarFuncContext _localctx = new LlamarFuncContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_llamarFunc);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129); match(VARIABLE);
			setState(130); match(PARENTESIS_IZQ);
			setState(139);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TRUE) | (1L << FALSE) | (1L << CADENA) | (1L << NUMEROS) | (1L << VARIABLE))) != 0)) {
				{
				setState(131); primario();
				setState(136);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMA) {
					{
					{
					setState(132); match(COMA);
					setState(133); primario();
					}
					}
					setState(138);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(141); match(PARENTESIS_DER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImprContext extends ParserRuleContext {
		public TerminalNode MOSTRAR_MARCADOR() { return getToken(Fuleco_v3Parser.MOSTRAR_MARCADOR, 0); }
		public TerminalNode PARENTESIS_IZQ() { return getToken(Fuleco_v3Parser.PARENTESIS_IZQ, 0); }
		public ConcatenContext concaten(int i) {
			return getRuleContext(ConcatenContext.class,i);
		}
		public List<ConcatenContext> concaten() {
			return getRuleContexts(ConcatenContext.class);
		}
		public TerminalNode FIN_LINEA() { return getToken(Fuleco_v3Parser.FIN_LINEA, 0); }
		public TerminalNode PARENTESIS_DER() { return getToken(Fuleco_v3Parser.PARENTESIS_DER, 0); }
		public ImprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_impr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Fuleco_v3Listener ) ((Fuleco_v3Listener)listener).enterImpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Fuleco_v3Listener ) ((Fuleco_v3Listener)listener).exitImpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Fuleco_v3Visitor ) return ((Fuleco_v3Visitor<? extends T>)visitor).visitImpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImprContext impr() throws RecognitionException {
		ImprContext _localctx = new ImprContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_impr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143); match(MOSTRAR_MARCADOR);
			setState(144); match(PARENTESIS_IZQ);
			setState(148);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==CADENA || _la==VARIABLE) {
				{
				{
				setState(145); concaten();
				}
				}
				setState(150);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(151); match(PARENTESIS_DER);
			setState(152); match(FIN_LINEA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConcatenContext extends ParserRuleContext {
		public List<TerminalNode> CONCATENAR() { return getTokens(Fuleco_v3Parser.CONCATENAR); }
